--- a/resources/testing output.ipynb
+++ b/resources/testing output.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -10,19 +10,20 @@
      "output_type": "stream",
      "text": [
       "> All Available Data\n",
-      "+------+----------------+\n",
-      "| dept |    courses     |\n",
-      "+------+----------------+\n",
-      "| INFO | [cryptography] |\n",
-      "| Bio  |   [Anatomy]    |\n",
-      "|  ST  |  [algorithme]  |\n",
-      "+------+----------------+\n",
+      "+------+--------------------------+\n",
+      "| dept |         courses          |\n",
+      "+------+--------------------------+\n",
+      "| INFO | [cryptography, Securité] |\n",
+      "| Bio  |        [Anatomy]         |\n",
+      "|  ST  |       [algorithme]       |\n",
+      "+------+--------------------------+\n",
       "+-----+--------------+-------------------+-----------------+\n",
       "|  id |   course #   | max # of students |   instructors   |\n",
       "+-----+--------------+-------------------+-----------------+\n",
       "| XC1 |  algorithme  |         40        | Mr Cherif Zahar |\n",
       "| XC2 | cryptography |         30        |     Mr Nahal    |\n",
       "| XC3 |   Anatomy    |         30        |   Mme Arroussi  |\n",
+      "| XC4 |   Securité   |         35        | Mr Cherif Zahar |\n",
       "+-----+--------------+-------------------+-----------------+\n",
       "+--------+----------------------+\n",
       "| room # | max seating capacity |\n",
@@ -50,18 +51,34 @@
       "+-----+---------------+\n",
       "\n",
       "> Generation # 1\n",
-      "['1', 1.0, 0, 'INFO,XC2,R2,Ens2,Se3, Bio,XC3,R3,Ens3,Se1, ST,XC1,R2,Ens1,Se5']\n",
-      "['2', 1.0, 0, 'INFO,XC2,R3,Ens2,Se4, Bio,XC3,R2,Ens3,Se1, ST,XC1,R2,Ens1,Se3']\n",
-      "['3', 0.5, 1, 'INFO,XC2,R3,Ens2,Se4, Bio,XC3,R3,Ens3,Se1, ST,XC1,R1,Ens1,Se5']\n",
-      "['4', 0.5, 1, 'INFO,XC2,R3,Ens2,Se1, Bio,XC3,R2,Ens3,Se1, ST,XC1,R2,Ens1,Se1']\n",
-      "['5', 0.333, 2, 'INFO,XC2,R1,Ens2,Se3, Bio,XC3,R2,Ens3,Se4, ST,XC1,R1,Ens1,Se1']\n",
-      "['6', 0.333, 2, 'INFO,XC2,R2,Ens2,Se4, Bio,XC3,R2,Ens3,Se4, ST,XC1,R3,Ens1,Se4']\n",
-      "['7', 0.333, 2, 'INFO,XC2,R1,Ens2,Se5, Bio,XC3,R2,Ens3,Se3, ST,XC1,R2,Ens1,Se3']\n",
-      "['8', 0.333, 2, 'INFO,XC2,R3,Ens2,Se4, Bio,XC3,R1,Ens3,Se2, ST,XC1,R3,Ens1,Se1']\n",
-      "['9', 0.333, 2, 'INFO,XC2,R1,Ens2,Se3, Bio,XC3,R2,Ens3,Se1, ST,XC1,R3,Ens1,Se4']\n",
+      "['1', 0.5, 1, 'INFO,XC2,R2,Ens2,Se3, INFO,XC4,R3,Ens1,Se1, Bio,XC3,R3,Ens3,Se2, ST,XC1,R1,Ens1,Se2']\n",
+      "['2', 0.5, 1, 'INFO,XC2,R3,Ens2,Se2, INFO,XC4,R1,Ens1,Se1, Bio,XC3,R2,Ens3,Se4, ST,XC1,R2,Ens1,Se5']\n",
+      "['3', 0.5, 1, 'INFO,XC2,R1,Ens2,Se1, INFO,XC4,R3,Ens1,Se1, Bio,XC3,R3,Ens3,Se4, ST,XC1,R2,Ens1,Se2']\n",
+      "['4', 0.333, 2, 'INFO,XC2,R3,Ens2,Se3, INFO,XC4,R3,Ens1,Se2, Bio,XC3,R3,Ens3,Se2, ST,XC1,R1,Ens1,Se5']\n",
+      "['5', 0.333, 2, 'INFO,XC2,R3,Ens2,Se3, INFO,XC4,R3,Ens1,Se3, Bio,XC3,R1,Ens3,Se3, ST,XC1,R2,Ens1,Se5']\n",
+      "['6', 0.333, 2, 'INFO,XC2,R1,Ens2,Se1, INFO,XC4,R2,Ens1,Se2, Bio,XC3,R1,Ens3,Se3, ST,XC1,R2,Ens1,Se3']\n",
+      "['7', 0.25, 3, 'INFO,XC2,R2,Ens2,Se1, INFO,XC4,R3,Ens1,Se4, Bio,XC3,R1,Ens3,Se3, ST,XC1,R1,Ens1,Se4']\n",
+      "['8', 0.25, 3, 'INFO,XC2,R2,Ens2,Se3, INFO,XC4,R1,Ens1,Se4, Bio,XC3,R2,Ens3,Se3, ST,XC1,R3,Ens1,Se2']\n",
+      "['9', 0.2, 4, 'INFO,XC2,R1,Ens2,Se5, INFO,XC4,R3,Ens1,Se2, Bio,XC3,R2,Ens3,Se1, ST,XC1,R3,Ens1,Se2']\n",
       "['1', 'INFO', 'cryptography (XC2, 30)', 'R2 (45)', 'Mr Nahal (Ens2)', '11h:05-12h:45 (Se3)']\n",
-      "['2', 'Bio', 'Anatomy (XC3, 30)', 'R3 (35)', 'Mme Arroussi (Ens3)', '8h:00-9h:30 (Se1)']\n",
-      "['3', 'ST', 'algorithme (XC1, 40)', 'R2 (45)', 'Mr Cherif Zahar (Ens1)', '14h15-15h50 (Se5)']\n",
+      "['2', 'INFO', 'Securité (XC4, 35)', 'R3 (35)', 'Mr Cherif Zahar (Ens1)', '8h:00-9h:30 (Se1)']\n",
+      "['3', 'Bio', 'Anatomy (XC3, 30)', 'R3 (35)', 'Mme Arroussi (Ens3)', '9h:35-11h00 (Se2)']\n",
+      "['4', 'ST', 'algorithme (XC1, 40)', 'R1 (25)', 'Mr Cherif Zahar (Ens1)', '9h:35-11h00 (Se2)']\n",
+      "\n",
+      "> Generation # 2\n",
+      "['1', 1.0, 0, 'INFO,XC2,R3,Ens2,Se2, INFO,XC4,R3,Ens1,Se1, Bio,XC3,R2,Ens3,Se4, ST,XC1,R2,Ens1,Se5']\n",
+      "['2', 1.0, 0, 'INFO,XC2,R2,Ens2,Se3, INFO,XC4,R3,Ens1,Se1, Bio,XC3,R3,Ens3,Se2, ST,XC1,R2,Ens1,Se2']\n",
+      "['3', 1.0, 0, 'INFO,XC2,R2,Ens2,Se4, INFO,XC4,R3,Ens1,Se1, Bio,XC3,R3,Ens3,Se2, ST,XC1,R2,Ens1,Se2']\n",
+      "['4', 0.5, 1, 'INFO,XC2,R2,Ens2,Se3, INFO,XC4,R3,Ens1,Se1, Bio,XC3,R3,Ens3,Se2, ST,XC1,R1,Ens1,Se2']\n",
+      "['5', 0.5, 1, 'INFO,XC2,R2,Ens2,Se3, INFO,XC4,R3,Ens1,Se1, Bio,XC3,R3,Ens3,Se2, ST,XC1,R2,Ens1,Se3']\n",
+      "['6', 0.5, 1, 'INFO,XC2,R3,Ens2,Se2, INFO,XC4,R1,Ens1,Se1, Bio,XC3,R3,Ens3,Se4, ST,XC1,R2,Ens1,Se5']\n",
+      "['7', 0.333, 2, 'INFO,XC2,R1,Ens2,Se1, INFO,XC4,R3,Ens1,Se1, Bio,XC3,R1,Ens3,Se3, ST,XC1,R2,Ens1,Se2']\n",
+      "['8', 0.333, 2, 'INFO,XC2,R3,Ens2,Se2, INFO,XC4,R3,Ens1,Se1, Bio,XC3,R3,Ens3,Se2, ST,XC1,R1,Ens1,Se2']\n",
+      "['9', 0.333, 2, 'INFO,XC2,R3,Ens2,Se2, INFO,XC4,R1,Ens1,Se1, Bio,XC3,R1,Ens3,Se4, ST,XC1,R2,Ens1,Se2']\n",
+      "['1', 'INFO', 'cryptography (XC2, 30)', 'R3 (35)', 'Mr Nahal (Ens2)', '9h:35-11h00 (Se2)']\n",
+      "['2', 'INFO', 'Securité (XC4, 35)', 'R3 (35)', 'Mr Cherif Zahar (Ens1)', '8h:00-9h:30 (Se1)']\n",
+      "['3', 'Bio', 'Anatomy (XC3, 30)', 'R2 (45)', 'Mme Arroussi (Ens3)', '13h:00-14h15 (Se4)']\n",
+      "['4', 'ST', 'algorithme (XC1, 40)', 'R2 (45)', 'Mr Cherif Zahar (Ens1)', '14h15-15h50 (Se5)']\n",
       "\n",
       "\n",
       "\n"
