--- a/resources/testing output.ipynb
+++ b/resources/testing output.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -10,20 +10,20 @@
      "output_type": "stream",
      "text": [
       "> All Available Data\n",
-      "+------+--------------------------+\n",
-      "| dept |         courses          |\n",
-      "+------+--------------------------+\n",
-      "| INFO | [cryptography, Securité] |\n",
-      "| Bio  |        [Anatomy]         |\n",
-      "|  ST  |       [algorithme]       |\n",
-      "+------+--------------------------+\n",
+      "+------+--------------------+\n",
+      "| dept |      courses       |\n",
+      "+------+--------------------+\n",
+      "| INFO | [cryptography, IA] |\n",
+      "| Bio  |     [Anatomy]      |\n",
+      "|  ST  |    [algorithme]    |\n",
+      "+------+--------------------+\n",
       "+-----+--------------+-------------------+-----------------+\n",
       "|  id |   course #   | max # of students |   instructors   |\n",
       "+-----+--------------+-------------------+-----------------+\n",
-      "| XC1 |  algorithme  |         40        | Mr Cherif Zahar |\n",
+      "| XC1 |  algorithme  |         25        | Mr Cherif Zahar |\n",
       "| XC2 | cryptography |         30        |     Mr Nahal    |\n",
       "| XC3 |   Anatomy    |         30        |   Mme Arroussi  |\n",
-      "| XC4 |   Securité   |         35        | Mr Cherif Zahar |\n",
+      "| XC4 |      IA      |         45        |    Miss Bacha   |\n",
       "+-----+--------------+-------------------+-----------------+\n",
       "+--------+----------------------+\n",
       "| room # | max seating capacity |\n",
@@ -51,34 +51,64 @@
       "+-----+---------------+\n",
       "\n",
       "> Generation # 1\n",
-      "['1', 0.5, 1, 'INFO,XC2,R2,Ens2,Se3, INFO,XC4,R3,Ens1,Se1, Bio,XC3,R3,Ens3,Se2, ST,XC1,R1,Ens1,Se2']\n",
-      "['2', 0.5, 1, 'INFO,XC2,R3,Ens2,Se2, INFO,XC4,R1,Ens1,Se1, Bio,XC3,R2,Ens3,Se4, ST,XC1,R2,Ens1,Se5']\n",
-      "['3', 0.5, 1, 'INFO,XC2,R1,Ens2,Se1, INFO,XC4,R3,Ens1,Se1, Bio,XC3,R3,Ens3,Se4, ST,XC1,R2,Ens1,Se2']\n",
-      "['4', 0.333, 2, 'INFO,XC2,R3,Ens2,Se3, INFO,XC4,R3,Ens1,Se2, Bio,XC3,R3,Ens3,Se2, ST,XC1,R1,Ens1,Se5']\n",
-      "['5', 0.333, 2, 'INFO,XC2,R3,Ens2,Se3, INFO,XC4,R3,Ens1,Se3, Bio,XC3,R1,Ens3,Se3, ST,XC1,R2,Ens1,Se5']\n",
-      "['6', 0.333, 2, 'INFO,XC2,R1,Ens2,Se1, INFO,XC4,R2,Ens1,Se2, Bio,XC3,R1,Ens3,Se3, ST,XC1,R2,Ens1,Se3']\n",
-      "['7', 0.25, 3, 'INFO,XC2,R2,Ens2,Se1, INFO,XC4,R3,Ens1,Se4, Bio,XC3,R1,Ens3,Se3, ST,XC1,R1,Ens1,Se4']\n",
-      "['8', 0.25, 3, 'INFO,XC2,R2,Ens2,Se3, INFO,XC4,R1,Ens1,Se4, Bio,XC3,R2,Ens3,Se3, ST,XC1,R3,Ens1,Se2']\n",
-      "['9', 0.2, 4, 'INFO,XC2,R1,Ens2,Se5, INFO,XC4,R3,Ens1,Se2, Bio,XC3,R2,Ens3,Se1, ST,XC1,R3,Ens1,Se2']\n",
-      "['1', 'INFO', 'cryptography (XC2, 30)', 'R2 (45)', 'Mr Nahal (Ens2)', '11h:05-12h:45 (Se3)']\n",
-      "['2', 'INFO', 'Securité (XC4, 35)', 'R3 (35)', 'Mr Cherif Zahar (Ens1)', '8h:00-9h:30 (Se1)']\n",
-      "['3', 'Bio', 'Anatomy (XC3, 30)', 'R3 (35)', 'Mme Arroussi (Ens3)', '9h:35-11h00 (Se2)']\n",
-      "['4', 'ST', 'algorithme (XC1, 40)', 'R1 (25)', 'Mr Cherif Zahar (Ens1)', '9h:35-11h00 (Se2)']\n",
+      "['1', 0.5, 1, 'INFO,XC2,R3,Ens2,Se5, INFO,XC4,R2,Ens4,Se1, Bio,XC3,R2,Ens3,Se3, ST,XC1,R1,Ens1,Se4']\n",
+      "['2', 0.5, 1, 'INFO,XC2,R2,Ens2,Se5, INFO,XC4,R2,Ens4,Se5, Bio,XC3,R3,Ens3,Se2, ST,XC1,R2,Ens1,Se1']\n",
+      "['3', 0.333, 2, 'INFO,XC2,R1,Ens2,Se3, INFO,XC4,R3,Ens4,Se2, Bio,XC3,R3,Ens3,Se5, ST,XC1,R2,Ens1,Se1']\n",
+      "['4', 0.25, 3, 'INFO,XC2,R2,Ens2,Se5, INFO,XC4,R1,Ens4,Se2, Bio,XC3,R3,Ens3,Se2, ST,XC1,R3,Ens1,Se2']\n",
+      "['5', 0.25, 3, 'INFO,XC2,R1,Ens2,Se2, INFO,XC4,R3,Ens4,Se4, Bio,XC3,R2,Ens3,Se3, ST,XC1,R1,Ens1,Se5']\n",
+      "['6', 0.25, 3, 'INFO,XC2,R3,Ens2,Se4, INFO,XC4,R3,Ens4,Se2, Bio,XC3,R1,Ens3,Se1, ST,XC1,R2,Ens1,Se5']\n",
+      "['7', 0.2, 4, 'INFO,XC2,R1,Ens2,Se4, INFO,XC4,R1,Ens4,Se4, Bio,XC3,R2,Ens3,Se5, ST,XC1,R3,Ens1,Se3']\n",
+      "['8', 0.2, 4, 'INFO,XC2,R2,Ens2,Se5, INFO,XC4,R3,Ens4,Se2, Bio,XC3,R1,Ens3,Se3, ST,XC1,R1,Ens1,Se3']\n",
+      "['9', 0.2, 4, 'INFO,XC2,R1,Ens2,Se1, INFO,XC4,R3,Ens4,Se2, Bio,XC3,R1,Ens3,Se5, ST,XC1,R2,Ens1,Se3']\n",
+      "['1', 'INFO', 'cryptography (XC2, 30)', 'R3 (35)', 'Mr Nahal (Ens2)', '14h15-15h50 (Se5)']\n",
+      "['2', 'INFO', 'IA (XC4, 45)', 'R2 (45)', 'Miss Bacha (Ens4)', '8h:00-9h:30 (Se1)']\n",
+      "['3', 'Bio', 'Anatomy (XC3, 30)', 'R2 (45)', 'Mme Arroussi (Ens3)', '11h:05-12h:45 (Se3)']\n",
+      "['4', 'ST', 'algorithme (XC1, 25)', 'R1 (25)', 'Mr Cherif Zahar (Ens1)', '13h:00-14h15 (Se4)']\n",
       "\n",
       "> Generation # 2\n",
-      "['1', 1.0, 0, 'INFO,XC2,R3,Ens2,Se2, INFO,XC4,R3,Ens1,Se1, Bio,XC3,R2,Ens3,Se4, ST,XC1,R2,Ens1,Se5']\n",
-      "['2', 1.0, 0, 'INFO,XC2,R2,Ens2,Se3, INFO,XC4,R3,Ens1,Se1, Bio,XC3,R3,Ens3,Se2, ST,XC1,R2,Ens1,Se2']\n",
-      "['3', 1.0, 0, 'INFO,XC2,R2,Ens2,Se4, INFO,XC4,R3,Ens1,Se1, Bio,XC3,R3,Ens3,Se2, ST,XC1,R2,Ens1,Se2']\n",
-      "['4', 0.5, 1, 'INFO,XC2,R2,Ens2,Se3, INFO,XC4,R3,Ens1,Se1, Bio,XC3,R3,Ens3,Se2, ST,XC1,R1,Ens1,Se2']\n",
-      "['5', 0.5, 1, 'INFO,XC2,R2,Ens2,Se3, INFO,XC4,R3,Ens1,Se1, Bio,XC3,R3,Ens3,Se2, ST,XC1,R2,Ens1,Se3']\n",
-      "['6', 0.5, 1, 'INFO,XC2,R3,Ens2,Se2, INFO,XC4,R1,Ens1,Se1, Bio,XC3,R3,Ens3,Se4, ST,XC1,R2,Ens1,Se5']\n",
-      "['7', 0.333, 2, 'INFO,XC2,R1,Ens2,Se1, INFO,XC4,R3,Ens1,Se1, Bio,XC3,R1,Ens3,Se3, ST,XC1,R2,Ens1,Se2']\n",
-      "['8', 0.333, 2, 'INFO,XC2,R3,Ens2,Se2, INFO,XC4,R3,Ens1,Se1, Bio,XC3,R3,Ens3,Se2, ST,XC1,R1,Ens1,Se2']\n",
-      "['9', 0.333, 2, 'INFO,XC2,R3,Ens2,Se2, INFO,XC4,R1,Ens1,Se1, Bio,XC3,R1,Ens3,Se4, ST,XC1,R2,Ens1,Se2']\n",
-      "['1', 'INFO', 'cryptography (XC2, 30)', 'R3 (35)', 'Mr Nahal (Ens2)', '9h:35-11h00 (Se2)']\n",
-      "['2', 'INFO', 'Securité (XC4, 35)', 'R3 (35)', 'Mr Cherif Zahar (Ens1)', '8h:00-9h:30 (Se1)']\n",
-      "['3', 'Bio', 'Anatomy (XC3, 30)', 'R2 (45)', 'Mme Arroussi (Ens3)', '13h:00-14h15 (Se4)']\n",
-      "['4', 'ST', 'algorithme (XC1, 40)', 'R2 (45)', 'Mr Cherif Zahar (Ens1)', '14h15-15h50 (Se5)']\n",
+      "['1', 0.5, 1, 'INFO,XC2,R3,Ens2,Se5, INFO,XC4,R2,Ens4,Se1, Bio,XC3,R2,Ens3,Se3, ST,XC1,R1,Ens1,Se4']\n",
+      "['2', 0.5, 1, 'INFO,XC2,R3,Ens2,Se5, INFO,XC4,R2,Ens4,Se1, Bio,XC3,R2,Ens3,Se3, ST,XC1,R1,Ens1,Se4']\n",
+      "['3', 0.5, 1, 'INFO,XC2,R3,Ens2,Se5, INFO,XC4,R2,Ens4,Se1, Bio,XC3,R2,Ens3,Se3, ST,XC1,R1,Ens1,Se4']\n",
+      "['4', 0.5, 1, 'INFO,XC2,R3,Ens2,Se5, INFO,XC4,R2,Ens4,Se1, Bio,XC3,R2,Ens3,Se3, ST,XC1,R1,Ens1,Se4']\n",
+      "['5', 0.333, 2, 'INFO,XC2,R2,Ens2,Se5, INFO,XC4,R3,Ens4,Se2, Bio,XC3,R3,Ens3,Se2, ST,XC1,R2,Ens1,Se1']\n",
+      "['6', 0.333, 2, 'INFO,XC2,R1,Ens2,Se3, INFO,XC4,R3,Ens4,Se2, Bio,XC3,R3,Ens3,Se5, ST,XC1,R2,Ens1,Se1']\n",
+      "['7', 0.25, 3, 'INFO,XC2,R1,Ens2,Se2, INFO,XC4,R3,Ens4,Se4, Bio,XC3,R3,Ens3,Se2, ST,XC1,R1,Ens1,Se5']\n",
+      "['8', 0.25, 3, 'INFO,XC2,R3,Ens2,Se5, INFO,XC4,R1,Ens4,Se2, Bio,XC3,R3,Ens3,Se2, ST,XC1,R3,Ens1,Se2']\n",
+      "['9', 0.25, 3, 'INFO,XC2,R3,Ens2,Se5, INFO,XC4,R3,Ens4,Se4, Bio,XC3,R2,Ens3,Se3, ST,XC1,R3,Ens1,Se5']\n",
+      "['1', 'INFO', 'cryptography (XC2, 30)', 'R3 (35)', 'Mr Nahal (Ens2)', '14h15-15h50 (Se5)']\n",
+      "['2', 'INFO', 'IA (XC4, 45)', 'R2 (45)', 'Miss Bacha (Ens4)', '8h:00-9h:30 (Se1)']\n",
+      "['3', 'Bio', 'Anatomy (XC3, 30)', 'R2 (45)', 'Mme Arroussi (Ens3)', '11h:05-12h:45 (Se3)']\n",
+      "['4', 'ST', 'algorithme (XC1, 25)', 'R1 (25)', 'Mr Cherif Zahar (Ens1)', '13h:00-14h15 (Se4)']\n",
+      "\n",
+      "> Generation # 3\n",
+      "['1', 0.5, 1, 'INFO,XC2,R3,Ens2,Se5, INFO,XC4,R2,Ens4,Se1, Bio,XC3,R2,Ens3,Se3, ST,XC1,R1,Ens1,Se4']\n",
+      "['2', 0.5, 1, 'INFO,XC2,R3,Ens2,Se5, INFO,XC4,R2,Ens4,Se1, Bio,XC3,R2,Ens3,Se3, ST,XC1,R1,Ens1,Se4']\n",
+      "['3', 0.5, 1, 'INFO,XC2,R3,Ens2,Se4, INFO,XC4,R2,Ens4,Se1, Bio,XC3,R2,Ens3,Se3, ST,XC1,R1,Ens1,Se4']\n",
+      "['4', 0.5, 1, 'INFO,XC2,R2,Ens2,Se5, INFO,XC4,R2,Ens4,Se1, Bio,XC3,R3,Ens3,Se2, ST,XC1,R2,Ens1,Se1']\n",
+      "['5', 0.333, 2, 'INFO,XC2,R1,Ens2,Se3, INFO,XC4,R2,Ens4,Se1, Bio,XC3,R2,Ens3,Se3, ST,XC1,R2,Ens1,Se1']\n",
+      "['6', 0.333, 2, 'INFO,XC2,R1,Ens2,Se3, INFO,XC4,R3,Ens4,Se1, Bio,XC3,R3,Ens3,Se5, ST,XC1,R2,Ens1,Se1']\n",
+      "['7', 0.333, 2, 'INFO,XC2,R3,Ens2,Se5, INFO,XC4,R1,Ens4,Se5, Bio,XC3,R2,Ens3,Se3, ST,XC1,R1,Ens1,Se4']\n",
+      "['8', 0.25, 3, 'INFO,XC2,R3,Ens2,Se5, INFO,XC4,R3,Ens4,Se2, Bio,XC3,R3,Ens3,Se2, ST,XC1,R1,Ens1,Se3']\n",
+      "['9', 0.25, 3, 'INFO,XC2,R2,Ens2,Se1, INFO,XC4,R3,Ens4,Se3, Bio,XC3,R1,Ens3,Se2, ST,XC1,R1,Ens1,Se4']\n",
+      "['1', 'INFO', 'cryptography (XC2, 30)', 'R3 (35)', 'Mr Nahal (Ens2)', '14h15-15h50 (Se5)']\n",
+      "['2', 'INFO', 'IA (XC4, 45)', 'R2 (45)', 'Miss Bacha (Ens4)', '8h:00-9h:30 (Se1)']\n",
+      "['3', 'Bio', 'Anatomy (XC3, 30)', 'R2 (45)', 'Mme Arroussi (Ens3)', '11h:05-12h:45 (Se3)']\n",
+      "['4', 'ST', 'algorithme (XC1, 25)', 'R1 (25)', 'Mr Cherif Zahar (Ens1)', '13h:00-14h15 (Se4)']\n",
+      "\n",
+      "> Generation # 4\n",
+      "['1', 1.0, 0, 'INFO,XC2,R3,Ens2,Se4, INFO,XC4,R2,Ens4,Se1, Bio,XC3,R2,Ens3,Se3, ST,XC1,R3,Ens1,Se1']\n",
+      "['2', 0.5, 1, 'INFO,XC2,R3,Ens2,Se5, INFO,XC4,R2,Ens4,Se1, Bio,XC3,R2,Ens3,Se3, ST,XC1,R1,Ens1,Se4']\n",
+      "['3', 0.5, 1, 'INFO,XC2,R3,Ens2,Se5, INFO,XC4,R2,Ens4,Se1, Bio,XC3,R3,Ens3,Se2, ST,XC1,R1,Ens1,Se4']\n",
+      "['4', 0.5, 1, 'INFO,XC2,R3,Ens2,Se5, INFO,XC4,R2,Ens4,Se1, Bio,XC3,R2,Ens3,Se3, ST,XC1,R2,Ens1,Se1']\n",
+      "['5', 0.5, 1, 'INFO,XC2,R3,Ens2,Se5, INFO,XC4,R2,Ens4,Se1, Bio,XC3,R2,Ens3,Se3, ST,XC1,R1,Ens1,Se4']\n",
+      "['6', 0.5, 1, 'INFO,XC2,R3,Ens2,Se4, INFO,XC4,R2,Ens4,Se1, Bio,XC3,R2,Ens3,Se3, ST,XC1,R1,Ens1,Se4']\n",
+      "['7', 0.5, 1, 'INFO,XC2,R3,Ens2,Se5, INFO,XC4,R2,Ens4,Se1, Bio,XC3,R2,Ens3,Se3, ST,XC1,R1,Ens1,Se4']\n",
+      "['8', 0.5, 1, 'INFO,XC2,R3,Ens2,Se4, INFO,XC4,R2,Ens4,Se1, Bio,XC3,R3,Ens3,Se2, ST,XC1,R2,Ens1,Se1']\n",
+      "['9', 0.5, 1, 'INFO,XC2,R3,Ens2,Se5, INFO,XC4,R2,Ens4,Se1, Bio,XC3,R2,Ens3,Se3, ST,XC1,R2,Ens1,Se1']\n",
+      "['1', 'INFO', 'cryptography (XC2, 30)', 'R3 (35)', 'Mr Nahal (Ens2)', '13h:00-14h15 (Se4)']\n",
+      "['2', 'INFO', 'IA (XC4, 45)', 'R2 (45)', 'Miss Bacha (Ens4)', '8h:00-9h:30 (Se1)']\n",
+      "['3', 'Bio', 'Anatomy (XC3, 30)', 'R2 (45)', 'Mme Arroussi (Ens3)', '11h:05-12h:45 (Se3)']\n",
+      "['4', 'ST', 'algorithme (XC1, 25)', 'R3 (35)', 'Mr Cherif Zahar (Ens1)', '8h:00-9h:30 (Se1)']\n",
       "\n",
       "\n",
       "\n"
@@ -100,6 +130,9 @@
     "\n",
     "db_req= mydb.cursor()\n",
     "db_req.execute(\"DELETE from generations\")\n",
+    "\n",
+    "db_req= mydb.cursor()\n",
+    "db_req.execute(\"DELETE from scheduals\")\n",
     "\n",
     "\n",
     "import prettytable\n",
@@ -164,7 +197,7 @@
     "        returnCourses = []\n",
     "        for i in range(0, len(courses)):\n",
     "            returnCourses.append(\n",
-    "                Course(courses[i][0], courses[i][1], self.select_course_instructors(courses[i][0]), courses[i][2]))\n",
+    "                Course(courses[i][0], courses[i][1], self.select_course_instructors(courses[i][0]), courses[i][2],courses[i][3]))\n",
     "        return returnCourses\n",
     "    def select_depts(self):\n",
     "        self._c.execute(\"SELECT *FROM departements\")\n",
@@ -236,6 +269,12 @@
     "        for i in range(0, len(classes)):\n",
     "            if (classes[i].get_room().get_seatingCapacity() < classes[i].get_course().get_maxNumbOfStudents()):\n",
     "                self._numbOfConflicts += 1\n",
+    "                \n",
+    "                \n",
+    "            if (classes[i].get_meetingTime().get_id()!='Se1' and classes[i].get_course().get_fondamental()==\"oui\"):\n",
+    "                self._numbOfConflicts += 1            \n",
+    "                \n",
+    "            \n",
     "            for j in range(0, len(classes)):\n",
     "                if (j >= i):\n",
     "                    if (classes[i].get_meetingTime() == classes[j].get_meetingTime() and\n",
@@ -256,6 +295,12 @@
     "        self._schedules = []\n",
     "        for i in range(0, size): self._schedules.append(Schedule().initialize())\n",
     "    def get_schedules(self): return self._schedules\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
     "class GeneticAlgorithm:\n",
     "    def evolve(self, population): return self._mutate_population(self._crossover_population(population))\n",
     "    def _crossover_population(self, pop):\n",
@@ -293,11 +338,15 @@
     "        tournament_pop.get_schedules().sort(key=lambda x: x.get_fitness(), reverse=True)\n",
     "        return tournament_pop\n",
     "class Course:\n",
-    "    def __init__(self, number, name, instructors, maxNumbOfStudents):\n",
+    "    def __init__(self, number, name, instructors, maxNumbOfStudents,fondamental):\n",
     "        self._number = number\n",
     "        self._name = name\n",
     "        self._maxNumbOfStudents = maxNumbOfStudents\n",
     "        self._instructors = instructors\n",
+    "        self._fondamental=fondamental\n",
+    "        \n",
+    "        \n",
+    "    def get_fondamental(self): return self._fondamental    \n",
     "    def get_number(self): return self._number\n",
     "    def get_name(self): return self._name\n",
     "    def get_instructors(self): return self._instructors\n",
